# h4r_gazebo_stuff

./: CMakeLists.txt  README.md  package.xml
def/: soil0.xacro
launch/: soil_test.launch
media/materials/scripts/: grass0.material  soil0.material  wood_faded0.material
