<?xml version="1.0"?>
<package>
  <name>h4r_gazebo_stuff</name>
  <version>0.0.0</version>
  <description>The h4r_gazebo_stuff package contains various resources for gazebo, materials, xacros, models</description>

  <maintainer email="cyborgx1@gmail.com">Christian Holl</maintainer>
  <author email="cyborgx1@gmail.com">Christian Holl</author>
  

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>gazebo_ros</run_depend>


  <export>    
  	<gazebo_ros gazebo_media_path ="${prefix}"/>
  	<gazebo_ros gazebo_models_path="${prefix}"/>                            
  </export>
</package>
